<resources>
    <string name="app_name">Totrick</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="status_completed">completed</string>
    <string name="status_pending">pending</string>

    <string name="comment">Comment</string>
     <string name="created_at_date">Created at: 01 Jan 2024</string>
    <string name="detail_comment">This is the comment for the to-do item.</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="title">Enter tittle here</string>
    <string name="save">Save</string>

</resources>