<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:menu="@menu/details_menu"
        app:title="Details"
        app:titleCentered="true"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="Pay Bills"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <!-- To-Do CreatedAt Date -->
        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/created_at_date"
            android:textColor="@color/colorPrimaryVariant"
            android:textSize="14sp" />

        <!-- Divider for clarity -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="@color/colorPrimaryVariant" />

        <!-- To-Do Comment -->
        <TextView
            android:id="@+id/tvComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/detail_comment"
            android:textColor="@color/colorOnSurface"
            android:textSize="16sp" />

        <!-- Status Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- To-Do Status -->
        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/status_background"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/pending"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>